NG:calendar: fix links, collapse behavior
Collapse only onclick header.
Remove event links if empty.
Remove More Events text if no link.
Open links in new window.

--- a/src/scss/_calendar_events.scss
+++ b/src/scss/_calendar_events.scss
@@ -56,7 +56,9 @@
             line-height: 18px;
             text-transform: uppercase;
         }
-        .date, .description {
+        .date,
+        .date a,
+        .description {
             font-size: 16px;
             font-family: "archer_lightregular", Helvetica, Arial, sans-serif;
             color: #fff;
